# flippybit-clone

./: README.md  com.example.flippybit.json  meson.build
src/: flippybit.gresource.xml  flippybit.in  main.py  meson.build
src/core/: enemy_manager.py  game_state.py  input_handler.py  projectile_manager.py
src/models/: enemy.py  game_config.py  projectile.py
src/ui/: __init__.py  game_area.ui  main_window.ui
src/views/: bit_display.py  game_renderer.py  main_window.py
